[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/demo_clear.gd" type="Script" id=1]
[ext_resource path="res://fonts/zx_spectrum/14px.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/7px_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/title_gap.tscn" type="PackedScene" id=4]

[node name="DemoClearScreen" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 38.0
margin_right = 148.0
margin_bottom = 153.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 136.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave amp=15 freq=7][center][rainbow freq=.7  sat=.8 val=1]DEMO
CLEAR[/rainbow][/center][/wave]"
text = "DEMO
CLEAR"
fit_content_height = true
scroll_active = false

[node name="TimeTakenLabel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 55.0
margin_right = 136.0
margin_bottom = 63.0
text = "Total Time: 00:00"

[node name="GoalsLabel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 67.0
margin_right = 136.0
margin_bottom = 75.0
text = "Total Goals: 0"

[node name="TouchesLabel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 79.0
margin_right = 136.0
margin_bottom = 87.0
text = "Total Touches: 0"

[node name="TitleGap" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 91.0
margin_right = 136.0
margin_bottom = 103.0

[node name="ContinueLabel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 107.0
margin_right = 136.0
margin_bottom = 115.0
text = "Continue"
